Kubernetessss/BankApp-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
    name: bankapp-namespace
    labels:
       app: bankapp-namespace
