Kubernetessss/BankApp-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
  namespace: bankapp-namespace
  labels:
    app: bankapp
spec:
  selector:
    app: bankapp-deploy
  ports:
   - protocol: TCP
     port: 8080
     targetPort: 8080
