Kubernetessss/mySql-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: bankapp-namespace
  labels:
    app: mysql-service
spec:
  selector:
    app: MySql-deployment
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
